--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web - Portfolio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>heading</h1>
-    
+    <section class="top-bannar">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="name-higlight">Prince</span> Shorif Khan World</h1>
+            <h3>World-class professional web devoloper</h3>
+            <p>Once you have accessed my website, find out something about me. I have a five star rating in the freelancer marketplace. i have been working on many projects for the last two years.</p>
+        </div>
+        <div class="half-width">
+            <img src="images/shorif.png" alt="photos">
+        </div>
+    </section>
 </body>
 </html>
