--- a/index.html
+++ b/index.html
@@ -15,10 +15,38 @@
             <h1><span class="name-higlight">Prince</span> Shorif Khan World</h1>
             <h3>World-class professional web devoloper</h3>
             <p>Once you have accessed my website, find out something about me. I have a five star rating in the freelancer marketplace. i have been working on many projects for the last two years.</p>
+            <a class="buttons" target="_blank" href="https://www.goggle.com">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/shorif.png" alt="photos">
         </div>
     </section>
+    <section class="dream-banner" style="padding-top: 100px;">
+        <div class="half-width">
+            <img src="images/shorif2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h3>Become a web devoloper</h3>
+            <p>I already learned the html css javascript i can build any standard. I can even teach my grandma how to make website. My goal is to 50 websites and learn advanced topics.</p>
+            <a class="buttons" target="_blank" href="https://www.goggle.com">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="experiance-area">  
+        <h1 style="text-align: center; color: orange; ">Experiences</h1>
+        <div id="full-stack" class="half-width single-experience">
+            <h2>Full stack Web Devoloper</h2>
+            <h3 class="orange-higlight">2021 - Present | Pro level Web Devoloper</h3>
+            <p>have accessed my website, find out something about me. I have a five star rating in the freelancer marketplace. i have been working on many projects for the last two years.have accessed my website, find out something about me. I have a five star rating in the freelancer marketplace. i have been working on many projects for the last two years.have accessed my website, find out something about me. I have a five star rating in the freelancer marketplace. i have been working on many projects for the last two years. i have been working on many projects for the last two years.</p>
+        </div>
+        <div id="full-stack-2" class="half-width single-experience">
+            <h2>Full stack Web Devoloper</h2>
+            <h3 class="orange-higlight">2021 - Present | Pro level Web Devoloper</h3>
+            <p>have accessed my website, find out something about me. I have a five star rating in the freelancer marketplace. i have been working on many projects for the last two years.have accessed my website, find out something about me. I have a five star rating in the freelancer marketplace. i have been working on many projects for the last two years.have accessed my website, find out something about me. I have a five star rating in the freelancer marketplace. i have been working on many projects for the last two years. i have been working on many projects for the last two years.</p>
+        </div>
+    </section>
+    <footer>
+        <p>@ Shorif - 2020 | All rights reserved.</p>
+    </footer>
 </body>
 </html>
